@@ -21,8 +21,10 @@
     "playlistImages: '1'" to 'prefs/plugin/material-skin.prefs'. Images need to
     be in 'prefs/material-skin/playlists/' - and have same name requiresments
     as per genre images.
-15. Use user genre, and playlist, images when listing favourites, if relevant
-    option is enabled.
+15. Use user genre, and playlist, images when listing favourites (if relevant
+    option is enabled).
+16. Create '.missing' images (e.g. 'rock.missing') from genre, and playlist,
+    images that are not found (if relevant option is enabled).
 
 5.8.1
 -----
